deploy/temperature-collector/deploymeny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring.temperature-collector  # Sets Deployment name
  labels:
    app: temperature-collector
    project: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temperature-collector
  template:
    metadata:
      labels:
        app: temperature-collector
        project: monitoring
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: monitoring-grafana
          image: monitoring-temperature-collector:latest # Sets Image
          imagePullPolicy: "Never"
          resources:
            limits:
              memory: 10M
          ports:
            - containerPort: 8000  # Exposes container port
              hostPort: 8001
      restartPolicy: Always
