deploy/temperature-collector/service.yml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-temperature-collector-service # Sets service name
  labels:
    app: temperature-collector
    project: monitoring
spec:
  ports:
    - protocol: TCP
      port: 8000 # Sets port to run the postgres application
      targetPort: 8000
  selector:
    project: monitoring
    app: temperature-collector
